# python-package-cookiecutter

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  Makefile  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  _main.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/subpackage/: __init__.py  core.py  formulas.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/utils/: __init__.py  utils.py
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/tests/subpackage/: __init__.py
{{cookiecutter.project_name}}/tests/utils/: __init__.py  test_utils_is_numeric.py
